--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,182 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
+.main-container {
+
+	margin:0 10%;
+}
+
+
+
+header {
+
+	width: 100%;
+	height: auto;
+	display: inline;
+}
+
+.nav {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+  	margin-top: 40px;
+  	margin-left: 20px;
+}
+.nav .nav-bar-item {
+	text-decoration: none;
+ 
+
+	/* make look like button */
+	padding: 15px;
+	width: 120px;
+	height: 50px;
+	text-align: center;
+	color: gray;
+}
+
+.nav-bar-item:hover {
+	background: gray;
+	color: white;
+}
+.logo {
+	display: flex;
+	align-self: flex-end;
+	position: relative;
+	left: 50px;
+	top: 0px;
+	margin-bottom:50px;
+
+}
+
+.cta {
+	margin-top: 10%;
+	width: 100%;
+	display: flex;
+	flex-direction: center;
+}
+
+
+.call-to-action {
+
+	display: inline-block;
+	width: 100%;
+}
+
+.cta-text {
+
+	font-size: 100px;
+	width: 370px;
+	text-align: center;
+	vertical-align: middle; /*//why does this not work?*/
+	margin-left: 25px;
+	display: block;
+
+}
+
+
+.cta-left {
+
+	width: 60%;
+	padding-left:15%;
+	display:inline-block;
+
+}
+
+.cta-button {
+	color: black;
+	border: 1px solid black;
+	text-decoration: none;
+	display: inline-block;
+
+	/* make look like button */
+	padding: 10px;
+	width: 150px;
+	height: 40px;
+	text-align: center;
+	position: relative;
+	left: 115px;
+	margin-left: 10px;
+
+
+}
+
+.cta-button:hover {
+	background: black;
+	color: white;
+}
+
+.first-image {
+	display: inline-block;
+
+	float: right;
+	width: 40%;
+	position: relative;
+	bottom: 40px;
+}
+
+.first-image img {
+	height: 400px;
+	width: auto;
+}
+
+.description-container {
+
+	display: flex;
+	margin-bottom: 20px;
+	justify-content: center;
+}
+
+.description{
+	width: 45%;
+	margin: 40px 10px;
+
+
+}
+
+.middle-img {
+	width: 90%;
+	height: 150px;
+	margin: 0 25px;
+	display: flex;
+	justify-content: center;
+}
+
+
+.divider {
+	border: 1px solid black;
+	margin: 10px;
+}
+
+footer {
+	margin-top: 50px;
+}
+
+.copyright {
+	text-align: center;
+	margin-bottom:50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
