--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -89,10 +89,11 @@ header {
   	margin-left: 20px;
 }
 .nav .nav-bar-item {
-	text-decoration: none;
+	
  
 
 	/* make look like button */
+	text-decoration: none;
 	padding: 15px;
 	width: 120px;
 	height: 50px;
@@ -224,8 +225,56 @@ footer {
 
 
 
+.services-header-img {
+	height: 200px;
+	width: 85%;
+	margin: 0;
+}
+
+.services-description {
+	display: block;
+	width: 85%
+	padding: 25px;
+	margin: 40px 0px;
+}
+
+.services-title {
+	font-size: 36px;
+}
+
+.content {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+
+}
+
+.services-block {
+	display: flex;
+	flex-direction: column;
+	height:270px;
+	width:350px;
+	background: #D3D3D3;
+	border: 2px solid black;
+	padding: 15px;
+
+}
+
+.block-button {
+
+	text-decoration: none;
+	padding: 5px;
+	text-align: center;
+	width: 150px;
+	height: 30px;
+	text-align: center;
+	border: 1px solid black;
+	color: black;
+	background: white;
+	margin: 20px 0px;
 
 
+}
 
 
 
