--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -90,7 +90,6 @@ header {
 }
 .nav .nav-bar-item {
 	
- 
 
 	/* make look like button */
 	text-decoration: none;
@@ -311,7 +310,15 @@ margin-bottom: 20px;
 
 
 
-footer p {
+.footer-services {
+	padding: 50px;
+	height: 100px;
+	display: flex;
+	margin: 0 auto;
+}
+
+.footer-services p {
+	margin-top: 200px;
 	margin: 0 auto;
 }
 
